Lilac: Use `BaseQualAdjustment` to determine base qual levels, and only trim low qual bases for Illumina.
Also, disable median base qual adjustment, and only report low median base qual for Illumina.